# Taxfix-App

./: .gitignore  :Users:anotherbadcode:Downloads:TaxFix-App::Users:anotherbadcode:Downloads:TaxFix-App:db.sqlite  Dockerfile  Makefile  README.md  collection.py  config.py  db_model.py  docker-compose.yml  inference.py  logger.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py  test_input.json
.github/workflows/: workflow.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: catboost_model_v1.pkl
src/: .gitignore  inference.py  runner.py  setup.cfg
src/config/: config.py
src/db/: db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
